--- a/map-6.html
+++ b/map-6.html
@@ -122,7 +122,7 @@
 
             $("#center").on("click", function (){
                 if(map){
-                    map.setView([-1.080665, 102.837307])
+                    map.setView([-1.080665, 102.837307], 5)
                 }
             })
         })();
