--- a/map-6.html
+++ b/map-6.html
@@ -24,6 +24,7 @@
         html,
         body {
             height: 100%;
+            background-color: #00634c;
         }
 
         #map {
@@ -34,11 +35,14 @@
             text-align: center;
             margin-bottom: 2rem;
         }
+        .white-text {
+            color: white;
+        }
     </style>
 </head>
 
 <body>
-    <div class='align-margin'>
+    <div class='align-margin white-text'>
         Image Opacity
         <input class="custom-range" type="range" id="sliderOpacity" min="0" max="1" step="0.1" value="0.5" />
     </div>
