--- a/map-6.html
+++ b/map-6.html
@@ -43,7 +43,7 @@
 
 <body>
     <div class='align-margin white-text'>
-        Image Opacity.
+        Image Opacity
         <input class="custom-range" type="range" id="sliderOpacity" min="0" max="1" step="0.1" value="0.5" />
     </div>
     <div class="align-margin">
